--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@kalimahapps/vue-icons": "^1.4.0",
+    "aos": "^2.3.4",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-i18n": "^9.9.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
